<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mindrevolution.nvidiacapstoneproject.GTX960"
    tools:showIn="@layout/activity_gtx960">

    <Button android:textColor="#000000"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnHome"
        android:id="@+id/btnHome"
        android:layout_below="@+id/btnBack"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtQuantity"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnHome"
        android:layout_alignEnd="@+id/btnHome" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxtQuantity"
        android:text="@string/etxtQuantityNum"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/imgFirestrike"
        android:layout_alignStart="@+id/imgFirestrike"
        android:layout_alignRight="@+id/imgGTXBench"
        android:layout_alignEnd="@+id/imgGTXBench" />

    <Button android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAddCart"
        android:id="@+id/btnAddCart"
        android:layout_alignTop="@+id/btnBack"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBenchIt"
        android:id="@+id/btnBenchIt"
        android:onClick="scaleAnimation"
        android:layout_alignTop="@+id/btnAddCart"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgGTX960"
        android:longClickable="true"
        android:src="@drawable/gtx960"
        android:layout_alignTop="@+id/imgFirestrike"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnBack"
        android:layout_toLeftOf="@+id/btnBack"
        android:layout_above="@+id/btnAddCart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtCashLeft"
        android:id="@+id/txtCashAmount"
        android:layout_alignBottom="@+id/etxtCashAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxtCashAmount"
        android:text="@string/txtCashAmount"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/txtCashAmount"
        android:layout_toEndOf="@+id/txtCashAmount" />

    <Button android:textColor="#000000"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBack"
        android:id="@+id/btnBack"
        android:layout_below="@+id/imgFirestrike"
        android:layout_marginTop="45dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/imgFirestrike"
        android:layout_alignStart="@+id/imgFirestrike" />

    <Button android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Cart"
        android:id="@+id/btnViewCart"
        android:layout_below="@+id/btnAddCart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btnAddCart"
        android:layout_alignEnd="@+id/btnAddCart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtAddCartCount"
        android:layout_below="@+id/btnViewCart"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgGTXBench"
        android:src="@drawable/benchbar5"
        android:layout_above="@+id/btnBack"
        android:layout_toRightOf="@+id/imgFirestrike"
        android:layout_toEndOf="@+id/imgFirestrike" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtScore"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgFirestrike"
        android:src="@drawable/firestrikescale"
        android:layout_below="@+id/etxtQuantity"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />
</RelativeLayout>
