<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mindrevolution.nvidiacapstoneproject.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:textColor="#00CC00"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/imgNvidia"
        android:layout_alignStart="@+id/imgNvidia" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgNvidia"
        android:src="@drawable/nvidia"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBuy"
        android:id="@+id/btnBuy"
        android:layout_below="@+id/txtBudget"
        android:layout_alignRight="@+id/btnSignUp"
        android:layout_alignEnd="@+id/btnSignUp"
        android:layout_toEndOf="@+id/imgNvidia"
        android:layout_alignBottom="@+id/btnNvidia"
        android:layout_toRightOf="@+id/imgNvidia" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtBudget"
        android:hint="@string/txtBudget"
        android:textColor="#00CC00"
        android:gravity="center"
        android:layout_below="@+id/imgNvidia"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="$"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/txtBudget"
        android:layout_toLeftOf="@+id/txtBudget"
        android:layout_toStartOf="@+id/txtBudget"
        android:textColor="#00CC00" />

    <Button android:textColor="#000000"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNvidia"
        android:id="@+id/btnNvidia"
        android:layout_below="@+id/txtBudget"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button android:textColor="#000000"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnVideoTip"
        android:id="@+id/btnVideoTip"
        android:layout_below="@+id/btnNvidia"
        android:layout_alignRight="@+id/btnNvidia"
        android:layout_alignEnd="@+id/btnNvidia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtError"
        android:layout_below="@+id/btnVideoTip"
        android:layout_centerHorizontal="true" />

    <Button android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSignUp"
        android:id="@+id/btnSignUp"
        android:singleLine="false"
        android:layout_below="@+id/btnNvidia"
        android:layout_above="@+id/txtError"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/imgNvidia"
        android:layout_toEndOf="@+id/imgNvidia" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Hi"
        android:id="@+id/txtUsername"
        android:textSize="15dp"
        android:layout_alignTop="@+id/imgNvidia"
        android:layout_toRightOf="@+id/txtTitle"
        android:layout_toEndOf="@+id/txtTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="View Account"
        android:id="@+id/txtViewAccount"
        android:textSize="15dp"
        android:layout_below="@+id/txtUsername"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_alignStart="@+id/txtUsername" />

</RelativeLayout>
